--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,29 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <include src="./partials/header.html"></include>
+    <include src="./partials/mobile-menu.html"></include>
+  <main>
+    <include src="./partials/hero.html"></include>
+    <include src="./partials/advantages.html"></include>
+    <include src="./partials/taste.html"></include>
+    <include src="./partials/video.html"></include>
+    <include src="./partials/products.html"></include>
+    <include src="./partials/sellers.html"></include>
+    <include src="./partials/review.html"></include>
+    <include src="./partials/subscribe.html"></include>
+  </main>
+    <include src="./partials/footer.html"></include>
+    <include src="./partials/modal-buy.html"></include>
+    <include src="./partials/modal-thanks.html"></include>
+    <include src="./partials/modal-review.html"></include>
+    <include src="./partials/modal-feedback.html"></include>
+    <include src="./partials/modal-subscribe.html"></include>
+
+    <script src="./js/mobile-menu.js"></script>
+    <script src="./js/modal-buy.js"></script>
+    <script src="./js/modal-review.js"></script>
+    <script src="./js/modal-subscribe.js"></script>
   </body>
+  
 </html>
